--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,47 @@
-annotated-types==0.7.0
-blis==0.7.11
-catalogue==2.0.10
-certifi==2024.7.4
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpathlib==0.18.1
-confection==0.1.5
-cymem==2.0.8
-en-core-web-sm==3.7.1
-filelock==3.15.4
-fsspec==2024.6.1
-idna==3.7
-Jinja2==3.1.4
-langcodes==3.4.0
-language_data==1.2.0
-marisa-trie==1.2.0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-mpmath==1.3.0
-murmurhash==1.0.10
-networkx==3.3
-numpy==1.26.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.6.20
-nvidia-nvtx-cu12==12.1.105
-packaging==24.1
-pip==24.0
-preshed==3.0.9
-pydantic==2.8.2
-pydantic_core==2.20.1
-Pygments==2.18.0
-regex==2024.7.24
-requests==2.32.3
-rich==13.7.1
-setuptools==72.2.0
-shellingham==1.5.4
-smart-open==7.0.4
-spacy==3.7.5
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.4.8
-sympy==1.13.2
-thinc==8.2.5
-tiktoken==0.7.0
-torch==2.4.0
-tqdm==4.66.5
-triton==3.0.0
-typer==0.12.3
-typing_extensions==4.12.2
-urllib3==2.2.2
-wasabi==1.1.3
-weasel==0.4.1
-wrapt==1.16.0
+annotated-types==0.7.0
+blis==0.7.11
+catalogue==2.0.10
+certifi==2024.7.4
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.18.1
+colorama==0.4.6
+confection==0.1.5
+cymem==2.0.8
+en-core-web-sm==3.7.1
+idna==3.7
+Jinja2==3.1.4
+langcodes==3.4.0
+language_data==1.2.0
+marisa-trie==1.2.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+murmurhash==1.0.10
+numpy==1.26.4
+packaging==24.1
+pip==24.2
+preshed==3.0.9
+pydantic==2.8.2
+pydantic_core==2.20.1
+Pygments==2.18.0
+regex==2024.7.24
+requests==2.32.3
+rich==13.7.1
+setuptools==65.5.0
+shellingham==1.5.4
+smart-open==7.0.4
+spacy==3.7.5
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
+thinc==8.2.5
+tiktoken==0.7.0
+tqdm==4.66.5
+typer==0.12.3
+typing_extensions==4.12.2
+urllib3==2.2.2
+wasabi==1.1.3
+weasel==0.4.1
+wrapt==1.16.0
+youtube-transcript-api==0.6.2
