--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==24.2.0
 beautifulsoup4==4.12.3
 blis==0.7.11
 bs4==0.0.2
+cachetools==5.4.0
 catalogue==2.0.10
 certifi==2024.7.4
 cffi==1.17.0
@@ -13,7 +14,14 @@ colorama==0.4.6
 confection==0.1.5
 cymem==2.0.8
 en-core-web-sm==3.7.1
+google-api-core==2.19.1
+google-api-python-client==2.141.0
+google-auth==2.33.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.63.2
 h11==0.14.0
+httplib2==0.22.0
 idna==3.7
 Jinja2==3.1.4
 langcodes==3.4.0
@@ -24,19 +32,27 @@ MarkupSafe==2.1.5
 mdurl==0.1.2
 murmurhash==1.0.10
 numpy==1.26.4
+oauthlib==3.2.2
 outcome==1.3.0.post0
 packaging==24.1
 pip==24.2
 preshed==3.0.9
+proto-plus==1.24.0
+protobuf==5.27.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
+pyparsing==3.1.2
 PySocks==1.7.1
 pytube==15.0.0
 regex==2024.7.24
 requests==2.32.3
+requests-oauthlib==2.0.0
 rich==13.7.1
+rsa==4.9
 selenium==4.23.1
 setuptools==65.5.0
 shellingham==1.5.4
@@ -55,6 +71,7 @@ trio==0.26.2
 trio-websocket==0.11.1
 typer==0.12.3
 typing_extensions==4.12.2
+uritemplate==4.1.1
 urllib3==2.2.2
 wasabi==1.1.3
 weasel==0.4.1
